call login before add to favorite

--- a/Movie-Client/src/app/favorites/favorites.component.html
+++ b/Movie-Client/src/app/favorites/favorites.component.html
@@ -32,8 +32,7 @@ fxLayoutGap="10px">
 </mat-grid-list>
 </div>
 <div *ngIf="errMess">
-<h2>Error</h2>
-<h4>{{errMess}}</h4>
+<h2>Please Login</h2>
 </div>
 </div>
 <ng-template #loading>
