little UI change

--- a/Movie-Client/src/app/footer/footer.component.html
+++ b/Movie-Client/src/app/footer/footer.component.html
@@ -22,7 +22,7 @@
       <div fxFlex="50">
         <h4>Contact</h4>
         <address>
-          This is a demo web application for seeking job as fullstack engineer/web developer. If you like it and have a job opportunity, please contact me without hesitation. Thanks.<br>
+          This is a demo web application for the author to seek job as a web developer. If you like it and have a job opportunity, please contact me without hesitation. Thanks.<br>
           <br><i class="fa fa-phone"></i>: +1 (937) 469-7256<br>
           <i class="fa fa-envelope"></i>:
           <a href="mailto:confusion@food.net">gaopu1993@gmail.com</a>
