--- a/Movie-Client/src/app/moviedetail/moviedetail.component.html
+++ b/Movie-Client/src/app/moviedetail/moviedetail.component.html
@@ -7,10 +7,6 @@
         </mat-card-title>
       </mat-card-header>
         <img mat-card-image src="{{movie.urlPoster}}" alt={{movie.title}}>
-      <mat-card-content>
-        <h3>IMDB Rating: {{movie.IMDbrating}}
-        </h3>
-      </mat-card-content>
       <mat-card-actions>
         <button mat-button [routerLink]="['/moviedetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
         <button mat-button (click)="goBack()"><span class="fa fa-arrow-left fa-lg"></span></button>
@@ -26,6 +22,8 @@
     <mat-list>
       <h3>Plot</h3>
       <p>{{movie.description}}</p><br>
+      <h3>IMDB Rating</h3> 
+      <p>{{movie.IMDbrating}} / 10</p><br>
       <h3>Comments</h3>
       <mat-list-item *ngFor="let comment of movie.comments">
         <h4 mat-line> {{comment.comment}} </h4>
@@ -37,7 +35,7 @@
     </mat-list>
     <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
       <p>
-        <mat-slider min="1" max="5" step="1" thumbLabel tickInterval="1" name="rating" formControlName="rating"></mat-slider>
+        <mat-slider min="1" max="10" step="1" thumbLabel tickInterval="1" name="rating" formControlName="rating"></mat-slider>
         <mat-form-field style="width:90%" dividerColor="{{(formErrors.comment) ? 'warn' : 'primary'}}">
           <textarea matInput formControlName="comment" placeholder="Your Comment"></textarea>
           <mat-hint>
