--- a/Movie-Client/src/app/footer/footer.component.html
+++ b/Movie-Client/src/app/footer/footer.component.html
@@ -1,42 +1,30 @@
-<div class="container footer" 
-    fxLayout="row" 
-    fxLayout.sm="column" 
-    fxLayout.xs="column" 
-    fxLayoutAlign.xs="start center" 
-    fxLayoutAlign.sm="start center"
-    fxLayoutAlign.gt-sm="center center" 
-    fxLayoutWrap 
-    fxLayoutGap="10px">
-
-  <div fxFlex="100%" fxFlex.gt-sm="50%">
-    <div fxLayout="row">
-      <div fxFlex="40" fxFlexOffset="20px">
-        
-        <mat-list>
-          <mat-list-item><h4>Links</h4></mat-list-item>
-          <mat-list-item><a mat-button style="text-align: left" routerLink="/home">Home</a></mat-list-item>
-          <mat-list-item><a mat-button style="text-align: left" routerLink="/movies">Movies</a></mat-list-item>
-          <mat-list-item><a mat-button style="text-align: left" routerLink="/favorites">Favorites</a></mat-list-item>
-        </mat-list>
-      </div>
-      <div fxFlex="50">
-        <h4>Contact</h4>
-        <address>
-          This is a demo web application for the author to seek job as a web developer. If you like it and have a job opportunity, please contact me without hesitation. Thanks.<br>
-          <br><i class="fa fa-phone"></i>: +1 (937) 469-7256<br>
-          <i class="fa fa-envelope"></i>:
-          <a href="mailto:confusion@food.net">gaopu1993@gmail.com</a>
-        </address>
-      </div>
+<div class="container footer toolbar text-floral-white">
+  <div class="row">
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <h4>Links</h4><br>
+      <mat-list>
+        <mat-list-item class="text-floral-white"><a mat-button style="text-align: left" routerLink="/home">Home</a></mat-list-item>
+        <mat-list-item class="text-floral-white"><a mat-button style="text-align: left" routerLink="/movies">Movies</a></mat-list-item>
+        <mat-list-item class="text-floral-white"><a mat-button style="text-align: left" routerLink="/favorites">Favorites</a></mat-list-item>
+      </mat-list>
     </div>
-  </div>
-  <div fxFlex="100%" fxFlex.gt-sm="45%">
-    <div style="text-align:center">
-      <a mat-icon-button class="btn-facebook" href="https://www.facebook.com/profile.php?id=100005500668025"><i class="fa fa-facebook fa-lg"></i></a>
-      <a mat-icon-button class="btn-linkedin" href="https://www.linkedin.com/in/gaopu/"><i class="fa fa-linkedin fa-lg"></i></a>
-      <a mat-icon-button class="btn-youtube" href="https://github.com/Ilovelibrary"><i class="fa fa-github fa-lg"></i></a>
-      <a mat-icon-button class="btn-mail" href="mailto:gaopu1993@gmail.com"><i class="fa fa-envelope-o fa-lg"></i></a>
-      <a mat-icon-button class="btn-google-plus" href="http://www.gaopu.me"><i class="fa fa-window-restore fa-lg"></i></a>
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <h4>Contact</h4><br>
+      <address>
+        This is a demo web application for the author to seek job as a web developer. If you like it and have a job opportunity, please contact me without hesitation. Thanks.<br>
+        <br><i class="fa fa-phone"></i>: +1 (937) 469-7256<br>
+        <i class="fa fa-envelope"></i>:
+        <i>gaopu1993@gmail.com</i>
+      </address>
+    </div>
+    <div class="col-md-6 col-sm-12 col-xs-12">
+      <div style="text-align:center; margin:100px 0;">
+        <a mat-icon-button class="btn-facebook" href="https://www.facebook.com/profile.php?id=100005500668025"><i class="fa fa-facebook fa-lg"></i></a>
+        <a mat-icon-button class="btn-linkedin" href="https://www.linkedin.com/in/gaopu/"><i class="fa fa-linkedin fa-lg"></i></a>
+        <a mat-icon-button class="btn-youtube" href="https://github.com/Ilovelibrary"><i class="fa fa-github fa-lg"></i></a>
+        <a mat-icon-button class="btn-mail" href="mailto:gaopu1993@gmail.com"><i class="fa fa-envelope-o fa-lg"></i></a>
+        <a mat-icon-button class="btn-google-plus" href="http://www.gaopu.me"><i class="fa fa-window-restore fa-lg"></i></a>
+      </div>
     </div>
   </div>
 </div>
