--- a/Movie-Client/src/app/footer/footer.component.scss
+++ b/Movie-Client/src/app/footer/footer.component.scss
@@ -1,16 +1,7 @@
-$lt-gray: #ddd;
-$background-dark: #512DA8;
-$background-light: #9575CD;
-$background-pale: #D1C4E9;
-
-@mixin zero-margin($pad-up-down, $pad-left-right) {
-    margin: 0px auto;
-    padding: $pad-up-down $pad-left-right;
-}
+$background-dark: #444444;
 
 .footer{
-    background-color: $background-pale;
-    @include zero-margin(20px, 0px);
+    background-color: $background-dark;
 }
 
 .btn-facebook {color:#fff!important; background-color:#3b5998!important;}
