--- a/Movie-Client/src/app/movies/movies.component.html
+++ b/Movie-Client/src/app/movies/movies.component.html
@@ -10,9 +10,9 @@
   </div>
 
   <div fxFlex *ngIf="movies" [@expand]>
-    <mat-grid-list cols="5" rowHeight="400px">
+    <mat-grid-list cols="5" rowHeight="3:5">
       <mat-grid-tile *ngFor="let movie of movies" [routerLink]="['/moviedetail', movie._id]" appHighlight>
-        <img height="400px" src="{{movie.urlPoster}}" alt={{movie.title}}>
+        <img src="{{movie.urlPoster}}" alt={{movie.title}}>
         <mat-grid-tile-footer>
           <h1 mat-line>{{movie.title | uppercase}}</h1>
         </mat-grid-tile-footer>
@@ -20,7 +20,7 @@
     </mat-grid-list>
   </div>
   <div [hidden]="movies || errMess">
-    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    <mat-spinner></mat-spinner><h4>Loading . . . </h4>
   </div>
   <div *ngIf="errMess">
     <h2>Error</h2>
