--- a/Movie-Client/src/styles.scss
+++ b/Movie-Client/src/styles.scss
@@ -1,41 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-$lt-gray: #ddd;
-$background-dark: #512DA8;
-$background-light: #9575CD;
-$background-pale: #D1C4E9;
-$primary-color-dark:   #512DA8;
-$primary-color:        #673AB7;
-$primary-color-light:  #D1C4E9;
-$primary-color-text:   #FFFFFF;
-$accent-color:         #FFC107;
-$primary-text-color:   #212121;
-$secondary-text-color: #757575;
-$divider-color:        #BDBDBD;
-
-@mixin zero-margin($pad-up-down, $pad-left-right) {
-    margin: 0px auto;
-    padding: $pad-up-down $pad-left-right;
-}
+$primary-color-dark:   #996633;
 
 body {
-    padding: 0;
-    margin: 0;
-    font-family: Roboto, sans-serif;
+    margin:0!important;
+    padding:0!important;
 }
 
 .container {
-    margin: 20px;
-    display:flex;
+    width:100%!important;
+    margin:0!important;
+    padding:30px 40px!important;
+    display:flex!important;
+}
+
+.toolbar {
+    background-color: #444444!important;
 }
 
 .background-primary {
-    background-color: $background-dark!important;
-  }
-.background-accent {
-    background-color: $accent-color!important;
-  }
+    background-color: $primary-color-dark!important;
+}
+
 .text-floral-white {
     color: floralwhite!important;
 }
@@ -45,8 +31,9 @@ body {
 }
 
 .highlight {
-    background-color: $background-pale;
-    border: 1px solid $primary-color-dark;
-    z-index: 1;
-    transform: scale(1.01);
+    border: 1px solid $primary-color-dark!important;
+    transition: 500!important;
+    box-shadow: #996633 0px 0px 50px!important;
+    z-index: 1!important;
+    transform: scale(1.01)!important;
 }
