--- a/Movie-Client/src/app/header/header.component.html
+++ b/Movie-Client/src/app/header/header.component.html
@@ -12,10 +12,11 @@
 
 <div class="container jumbotron">
   <div>
-    <h1>Fresh Tomotas</h1>
+    <h1>Fresh Tomatoes</h1>
+    <h3>We don't produce tomatoes, we are the deliverers of fresh tomatoes.</h3>
   </div>
   <span class="flex-spacer"></span>
   <div>
-    <img src="/assets/images/tomota.png" height=100 width=100 alt="Logo">
+    <img src="/assets/images/tomota.png" height=140 width=140 alt="Logo">
   </div>
 </div>
