--- a/Movie-Client/src/app/home/home.component.html
+++ b/Movie-Client/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-sm-4 col-xs-12" *ngFor="let movie of movies">
-      <mat-card *ngIf="movie" [routerLink]="['/moviedetail', movie._id]" appHighlight [@expand]>
+      <mat-card *ngIf="movie" [routerLink]="['/moviedetail', movie._id]" appHighlight>
         <mat-card-header>
           <mat-card-title>
             <h3>{{movie.title | uppercase}}</h3>
@@ -13,13 +13,13 @@
           </p>
         </mat-card-content>
       </mat-card>
-      <div [hidden]="movie || movieErrMess">
+    </div>
+    <div [hidden]="movies || movieErrMess">
         <mat-spinner></mat-spinner><h4>Loading . . . </h4>
       </div>
       <div *ngIf="movieErrMess">
         <h2>Error</h2>
         <h4>{{movieErrMess}}</h4>
       </div> 
-    </div>
   </div>
 </div>
