small UI changes

--- a/Movie-Client/src/app/footer/footer.component.html
+++ b/Movie-Client/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container footer toolbar text-floral-white">
   <div class="row">
     <div class="col-md-3 col-sm-6 col-xs-12">
-      <h4>Links</h4><br>
+      <h4 style="padding:0 30px;">Links</h4><br>
       <mat-list>
         <mat-list-item class="text-floral-white"><a mat-button style="text-align: left" routerLink="/home">Home</a></mat-list-item>
         <mat-list-item class="text-floral-white"><a mat-button style="text-align: left" routerLink="/movies">Movies</a></mat-list-item>
