fix the prob of the base url in building

--- a/Movie-Client/src/app/header/header.component.html
+++ b/Movie-Client/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="toolbar text-floral-white">
-  <span><img src="/assets/images/tomota.png" height=40 width=40></span>
+  <span><img src="./assets/images/tomato.png" height=40 width=40></span>
   <span class="flex-spacer"></span>
   <a mat-button routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
   <a mat-button routerLink="/movies" routerLinkActive="active"><span class="fa fa-list fa-lg"></span> Movies</a>
@@ -17,6 +17,6 @@
   </div>
   <span class="flex-spacer"></span>
   <div>
-    <img src="/assets/images/tomato.png" height=140 width=140 alt="Logo">
+    <img src="./assets/images/tomato.png" height=140 width=140 alt="Logo">
   </div>
 </div>
